# qml-medimage

./: .gitignore  LICENSE  MULTISEED_COMMANDS.md  README.md  pyproject.toml  requirements.txt
docs/: contributing.md  index.html
docs/figures/: qubit_scaling_data.csv
docs/static/css/: index.css
pre-processing/: check_embedding_sizes-insurance.ipynb  create-20-seeds-dataset-medclip.ipynb  get-2k-dataset_seeding-gender.ipynb  get_2k_dataset_seeding_insurance-last.ipynb
pre-processing/pca-pipeline/: apply_pca_reduction.py  pca_variance_analysis.csv  pca_variance_analysis.py  run_pca_pipeline.py  verify_pca_format.py
qve/: __init__.py  core.py  process.py
scripts/: aggregate_multiseed.py  bootstrap_ci.py  classical_svm_c1_pca.py  classical_svm_c1_pca_extended.py  classical_svm_multiseed.py  paired_bootstrap_q11.py  qsvm_cuda_embeddings_insurance.py  rbf_rank_matched.py  rbf_rank_matched_multiseed.py  regen_eigenspectrum_fig.py  regen_qubit_scaling_fig.py  regen_scatter_figs.py
slurm/: aggregate_multiseed.sh  classical_svm_multiseed.sh  contrib_multiseed_medsig_dt9.sh  contrib_multiseed_raddino_dt9.sh  contrib_multiseed_vit16cls_dt9.sh  contrib_multiseed_vit32gap_dt9.sh  contrib_multiseed_vit_dt9.sh  mpi_q8_raddino.sh  mpi_q8_vit.sh  mpi_q9_c1_forced.sh  mpi_q9q11q12_raddino.sh  mpi_q9q11q12_vit.sh  multiseed_medsig_dt9.sh  multiseed_raddino_dt9.sh  multiseed_raddino_dt9_normal.sh  multiseed_vit16cls_dt9.sh  multiseed_vit32gap_dt9.sh  multiseed_vit_dt9.sh  multiseed_vit_dt9_normal.sh  rbf_rank_matched.sh  rbf_rank_matched_multiseed.sh  regen_eigenspectrum_fig.sh  regen_qubit_scaling_fig.sh  submit_multiseed_medsig.sh
tests/: __init__.py  run_tests_standalone.py  save_kernels_q11.sh  save_kernels_q16.sh  test_aggregation_fix.py  test_basic.py  test_hybrid_kernel.py  test_imports.py  test_process_fix.py  test_qsvm_quick.py  test_qve_core.py  test_script_imports.py
