[project]
name = "qml-medimage"
version = "0.1.0"
description = "Embedding-Aware Quantum-Classical SVMs for Scalable Quantum Machine Learning"
authors = [{ name = "Sebastian Cajas", email = "sebasmos@mit.edu" }]
dependencies = [
    "scikit-learn==1.6.1",
    "opt_einsum==3.4.0",
    "qiskit==1.2.4",
    "cuquantum==24.8.0.2",
    "cuquantum-python==24.8.0.2",
    "tabulate==0.9.0",
    "pandas==2.2.2",
    "pyarrow>=15.0.0",
    "matplotlib==3.10.0",
    "seaborn==0.13.2",
    "sympy==1.13.1",
    "joblib==1.4.2",
    "setuptools==75.1.0",
    "scipy==1.14.1",
    "clip @ git+https://github.com/openai/CLIP.git",
    "ftfy",
    "regex", 
    "tqdm"
]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Free For Non-Commercial Use",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

keywords = ["quantum machine learning", "vector embeddings", "SVM"]

[project.urls]
Repository = "https://github.com/sebasmos/qml-medimage"
Paper = "https://arxiv.org/abs/2604.24597"
Dataset = "https://huggingface.co/datasets/MITCriticalData/qml-mimic-cxr-embeddings"
"Bug Tracker" = "https://github.com/sebasmos/qml-medimage/issues"

[project.optional-dependencies]
dev = ["ruff", "pytest>=7.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["qve"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "gpu: marks tests as requiring GPU (skipped without GPU access)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]  